fix: header content align
Fix Justify content so that it is always the same in the header

--- a/src/stylesheets/globals.css
+++ b/src/stylesheets/globals.css
@@ -192,8 +192,6 @@ footer div p a {
   /* Second Grade */
 
   body > header {
-    /* Display */
-    justify-content: left;
     /* Spacers */
     padding: 1rem;
   }
